--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,14 @@ android {
 }
 
 dependencies {
+    def room_version = "2.2.5"
+    //Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    //Hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    //Material
     implementation 'com.afollestad.material-dialogs:input:3.3.0'
     api 'com.google.android.material:material:1.1.0-alpha06'
     implementation fileTree(dir: "libs", include: ["*.jar"])
