--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ android {
 }
 
 dependencies {
+    //Roboelectric
+    testImplementation 'org.robolectric:robolectric:4.3'
     // When using Kotlin.
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
     implementation 'androidx.activity:activity-ktx:1.1.0'
@@ -60,6 +62,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //Room
     def room_version = "2.2.5"
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     //Hilt
