--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,11 @@ android {
 }
 
 dependencies {
+    //Testing liveModel
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:3.3.3"
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.4'
     //Roboelectric
     testImplementation 'org.robolectric:robolectric:4.3'
     // When using Kotlin.
