--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
 
 dependencies {
     //Testing liveModel
+    testCompile group: 'org.easytesting', name: 'fest-assert', version: '1.4'
     testImplementation 'junit:junit:4.12'
     testImplementation "org.mockito:mockito-core:3.3.3"
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
